# syclockcfg_baremtal_stm32

./: CMakeLists.txt  arm-toolchain.cmake  autobuild-script.bat  flash_all.bat  readme.md
project1/: CMakeLists.txt  main.c  sysclocks.c  sysclocks.h
tools/stm32-programmer/doc/: Readme.txt
